--- a/template.tex
+++ b/template.tex
@@ -31,9 +31,11 @@
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{cmll}
-%include lhs2TeX.fmt
+%include polycode.fmt
 \newcommand\var[1]{\ensuremath{\Varid{#1}}}
+\newcommand\HREF[2]{\href{#2}{#1}}
 \input{PaperTools/latex/unicodedefs}
+\usepackage{hyperref}
 
 \begin{document}
 
@@ -101,14 +103,7 @@ Acknowledgments, if needed.
 
 % The bibliography should be embedded for final submission.
 
-\begin{thebibliography}{}
-\softraggedright
-
-\bibitem[Smith et~al.(2009)Smith, Jones]{smith02}
-P. Q. Smith, and X. Y. Jones. ...reference text...
-
-\end{thebibliography}
-
+\bibliography{PaperTools/bibtex/jp}
 
 \end{document}
 
