--- a/template.tex
+++ b/template.tex
@@ -15,6 +15,7 @@
 \newcommand\HREF[2]{\href{#2}{#1}}
 \input{PaperTools/latex/unicodedefs}
 \usepackage{hyperref}
+\usepackage{longtable,booktabs}
 
 \begin{document}
 
