Add another bib file

--- a/template.tex
+++ b/template.tex
@@ -70,7 +70,7 @@ Acknowledgments, if needed.
 
 % The bibliography should be embedded for final submission.
 
-\bibliography{PaperTools/bibtex/jp}
+\bibliography{PaperTools/bibtex/jp,js}
 
 \end{document}
 
