--- a/template.tex
+++ b/template.tex
@@ -1,4 +1,4 @@
-\documentclass[preprint]{PaperTools/latex/sigplanconf}
+\documentclass[preprint,authoryear]{PaperTools/latex/sigplanconf}
 
 % The following \documentclass options may be useful:
 
@@ -14,7 +14,7 @@
 \newcommand\var[1]{\ensuremath{\Varid{#1}}}
 \newcommand\HREF[2]{\href{#2}{#1}}
 \input{PaperTools/latex/unicodedefs}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage{longtable,booktabs}
 
 \begin{document}
