nicolas' feedback and other tweaks

--- a/template.tex
+++ b/template.tex
@@ -46,7 +46,7 @@ $if(subtitle)$
 \subtitle{$subtitle$}
 $endif$
 
-\authorinfo{Jean-Philippe Bernardy\and Josef Svennigsson}
+\authorinfo{Jean-Philippe Bernardy\and Josef Svenningsson}
            {Chalmers University of Technology and University of Gothenburg}
            {bernardy,josefs at chalmers.se}
 
