--- a/js.bib
+++ b/js.bib
@@ -5,3 +5,11 @@
   year = 	 2015
 }
 
+@inproceedings{claessen2012expressive,
+  title={Expressive array constructs in an embedded GPU kernel programming language},
+  author={Claessen, Koen and Sheeran, Mary and Svensson, Bo Joel},
+  booktitle={Proceedings of the 7th workshop on Declarative aspects and applications of multicore programming},
+  pages={21--30},
+  year={2012},
+  organization={ACM}
+}
