--- a/js.bib
+++ b/js.bib
@@ -13,3 +13,10 @@
   year={2012},
   organization={ACM}
 }
+
+@misc{kmett_contravariant,
+	author = {Edward A. Kmett},
+	title = {The contravariant package},
+	url = {https://github.com/ekmett/contravariant/},
+	year = 2015
+},
