nicify author list

--- a/template.tex
+++ b/template.tex
@@ -49,7 +49,7 @@ $endif$
 \authorinfo{%
 $for(author)$
 $author.name$ %
-\and %
+$sep$ \and %
 $endfor$
 }
            {Chalmers University of Technology and University of Gothenburg}
