More text on exceptions curtesy of Oleg

--- a/js.bib
+++ b/js.bib
@@ -20,3 +20,21 @@
 	url = {https://github.com/ekmett/contravariant/},
 	year = 2015
 },
+
+@inproceedings{kiselyov2008lightweight,
+  title={Lightweight monadic regions},
+  author={Kiselyov, Oleg and Shan, Chung-chieh},
+  booktitle={Haskell Symposium},
+  year={2008},
+  organization={ACM}
+},
+
+@misc{kiselyov12:region_iteratees,
+	author = {Oleg Kiselyov},
+	title = {Combining Monadic Regions and Iteratees},
+
+	month = {Jan},
+	year = 2012,
+	keywords = {open},
+	howpublished = {\url{http://okmij.org/ftp/Streams.html#regions}}
+},
