--- a/template.tex
+++ b/template.tex
@@ -12,6 +12,7 @@
 %include polycode.fmt
 %include local.fmt
 \newcommand\var[1]{\ensuremath{\Varid{#1}}}
+\newcommand\smallcaps[1]{{\sc #1}}
 \newcommand\HREF[2]{\href{#2}{#1}}
 \input{PaperTools/latex/unicodedefs}
 \usepackage[hidelinks]{hyperref}
