New pandoc uses a form of list defined by latex macro

--- a/template.tex
+++ b/template.tex
@@ -18,6 +18,9 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{longtable,booktabs}
 
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+
 \begin{document}
 
 \special{papersize=8.5in,11in}
