Change footer to reflect IFL submission

--- a/template.tex
+++ b/template.tex
@@ -43,7 +43,7 @@
                                   % short abstracts)
 
 \titlebanner{Draft: do not distribute}        % These are ignored unless
-\preprintfooter{Sumitted to Haskell 2015}   % 'preprint' option specified.
+\preprintfooter{Sumitted to IFL 2015}   % 'preprint' option specified.
 
 \title{$title$}
 $if(subtitle)$
