Add some related work on transducers

--- a/js.bib
+++ b/js.bib
@@ -1,7 +1,18 @@
+@article{shivers2006continuations,
+  title={Continuations and transducer composition},
+  author={Shivers, Olin and Might, Matthew},
+  journal={ACM SIGPLAN Notices},
+  volume={41},
+  number={6},
+  pages={295--307},
+  year={2006},
+  publisher={ACM}
+}
+
 @InProceedings{svenningsson15:monadic_streams,
   author = 	 {Josef Svenningsson and Emil Axelsson and Anders Persson and Peter A. Jonsson},
   title = 	 {Efficient Monadic Streams},
-  booktitle = {Trends in Functional Programming},
+  booktitle = {Presented at Trends in Functional Programming},
   year = 	 2015
 }
 
