compactify to 12 pages

--- a/template.tex
+++ b/template.tex
@@ -44,8 +44,8 @@ $endif$
 \author{Jean-Philippe Bernardy}
 \affiliation{%
   \institution{Gothenburg University}
-  \department{Department of Philosophy, Linguistics and Theory of Science}
-  \streetaddress{Olof Wijksgatan 6}
+  % \department{Department of Philosophy, Linguistics and Theory of Science}
+  % \streetaddress{Olof Wijksgatan 6}
   \city{Gothenburg}
   % \state{VA}
   \postcode{41255}
@@ -53,7 +53,7 @@ $endif$
 \author{Josef Svenningsson}
 \affiliation{%
   \institution{Chalmers University of Technology}
-  \city{Paris}
+  \city{Gothenburg}
   % \state{VA}
   \postcode{???}
   \country{Sweden}
