--- a/template.tex
+++ b/template.tex
@@ -43,7 +43,7 @@ $endif$
 
 \author{Jean-Philippe Bernardy}
 \affiliation{%
-  \institution{Gothenburg University}
+  \institution{University of Gothenburg}
   % \department{Department of Philosophy, Linguistics and Theory of Science}
   % \streetaddress{Olof Wijksgatan 6}
   \city{Gothenburg}
